--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,29 @@
-tqdm==4.62.1
-numpy==1.21.0
+tqdm
+numpy
 matplotlib
 pandas
-pyfiglet
 scikit_learn
 swifter==1.0.9
 wandb
 wget==3.2
 pytest
-umap-learn
 plotly
 mapply
-torch
-torchvision
 torchinfo
-pytorch_lightning
-git+https://github.com/qubvel/segmentation_models.pytorch
-torchmetrics==0.10.2
-pickle5
+torchmetrics
 einops
-imblearn
+black>=22.6
+coverage>=6
+darglint>=1.8
+isort>=5.10
+pipreqs==0.4.11
+pre-commit>=2.20
+pytest-cov>=3
 transformers
+seaborn
+pyod
 jupyter
-scienceplots
-faiss-cpu
-faiss-gpu
+fitter
+SciencePlots
+scikit-image
+torch-lr-finder
