--- a/.gitignore
+++ b/.gitignore
@@ -293,8 +293,8 @@ assets/*.pickle
 notebooks/checkpoints
 notebooks/tmp_models
 assets/cleaning_influence/cache/*
-notebooks/DINO*
-notebooks/tmp
+examples/DINO*
+examples/tmp
 
 # don't track env file with secret
 .env
