added setup for package

--- a/.github/workflows/upload-to-pip.yml
+++ b/.github/workflows/upload-to-pip.yml
@@ -42,6 +42,10 @@ jobs:
                   python3 -m pip install --upgrade pip
                   python3 -m pip install setuptools wheel twine
 
+            - name: "List directory"
+              run: |
+                  ls -al
+
             - name: "Builds and uploads to PyPI"
               run: |
                   python3 setup.py sdist bdist_wheel
