changed to relative imports

--- a/.github/workflows/pytest-coverage.yml
+++ b/.github/workflows/pytest-coverage.yml
@@ -47,9 +47,9 @@ jobs:
 
             - name: Run pytest with coverage
               run: |
-                  python3 -m coverage run -m pytest tests --junitxml=report.xml --ignore=tests/integration_tests
-                  coverage report -i --include=src/*
-                  coverage xml -i --include=src/*
+                  python3 -m coverage run -m pytest tests --junitxml=report.xml --ignore=tests/integration_tests --omit="src/ssl_library/*"
+                  coverage report -i --include=src/* --omit="src/ssl_library/*"
+                  coverage xml -i --include=src/* --omit="src/ssl_library/*"
                   codecov
 
             - name: Upload coverage reports to Codecov
