minor fix in workflow

--- a/.github/workflows/pytest-coverage.yml
+++ b/.github/workflows/pytest-coverage.yml
@@ -47,7 +47,7 @@ jobs:
 
             - name: Run pytest with coverage
               run: |
-                  python3 -m coverage run -m pytest tests --junitxml=report.xml --ignore=tests/integration_tests --omit="src/ssl_library/*"
+                  python3 -m coverage run -m pytest tests --junitxml=report.xml --ignore=tests/integration_tests
                   coverage report -i --include=src/* --omit="src/ssl_library/*"
                   coverage xml -i --include=src/* --omit="src/ssl_library/*"
                   codecov
