--- a/.github/workflows/upload-to-pip.yml
+++ b/.github/workflows/upload-to-pip.yml
@@ -48,7 +48,7 @@ jobs:
 
             - name: "Builds and uploads to PyPI"
               run: |
-                  python3 setup.py sdist bdist_wheel
+                  python3 setup sdist bdist_wheel
                   python3 -m twine upload --verbose dist/*
               env:
                   TWINE_USERNAME: __token__
