--- a/.github/workflows/pytest-coverage.yml
+++ b/.github/workflows/pytest-coverage.yml
@@ -43,6 +43,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+                  if [ -f requirements.extras.txt ]; then pip install -r requirements.extras.txt; fi
                   pip install pytest pytest-cov
 
             - name: Run pytest with coverage
