started with renaming

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "SelfClean"
-description = "A holistic self-supervised data cleaning strategy to detect irrelevant samples, near duplicates and label errors."
+description = "A holistic self-supervised data cleaning strategy to detect off-topic samples, near duplicates and label errors."
 authors = [
     { name = "Fabian Gröger", email = "fabian.groeger@unibas.ch" },
 ]
