--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,7 @@ darglint>=1.8
 isort>=5.10
 pre-commit>=2.20
 pytest-cov>=3
-safetensors==0.3.1
-transformers[torch]
+transformers[torch]==4.27.4
 seaborn
 SciencePlots
 scikit-image
