--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ssl_library"]
-	path = src/ssl_library
+	path = selfclean/ssl_library
 	url = https://github.com/mse-thesis-dermatology/ssl_library
